--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "expo": "^33.0.0",
-    "react": "16.8.3"
+    "expo": "^35.0.0",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
   }
 }
